fixed bug with window on firefox browser

--- a/css/style.css
+++ b/css/style.css
@@ -261,6 +261,7 @@ section {
 
 .slide1 {
     background-image: url(../img/slide4.jpg);
+    background-attachment: fixed;
     height: 716px;
     filter: grayscale(60%);
     /* border-top: 2.5px solid black;
@@ -269,6 +270,7 @@ section {
 .slide2 {
     background-image: url(../img/slide3.jpg);
     height: 716px;
+    background-attachment: fixed;
     filter: grayscale(60%);
     /* border-top: 2.5px solid black;
     border-bottom: 1.5px solid black; */
@@ -277,6 +279,7 @@ section {
 .slide3 {
     background-image: url(../img/slide1.jpg);
     height: 716px;
+    background-attachment: fixed;
     filter: grayscale(60%);
     /* border-top: 2.5px solid black;
     border-bottom: 1.5px solid black; */
@@ -414,8 +417,15 @@ section {
     background-color: rgba(255, 255, 255, 0.733);
     margin-top: -9.4em;
     margin-left: 25em;
+    -moz-margin-start: 50em;
+    -moz-transform: rotateY(260deg);
     border-radius: 10px;
     position: absolute;
+}
+@-moz-document url-prefix() {
+    .slide-box3 {
+        margin-top: -18.7em;
+    }
 }
 
 .slide-box3 h4 {
